kubernetes-monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: homework
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: web-pvc
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 8000
      - name: nginx-exporter
        image: 'nginx/nginx-prometheus-exporter:0.10.0'
        args:
          - '-nginx.scrape-uri=http://localhost:8000/metrics'
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
          - containerPort: 9113
      volumes:
      - name: web-pvc
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: config
          items:
          - key: default.conf
            path: default.conf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
