kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: homework
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: web
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: homework
  labels:
    release: prometheus
    app: web
spec:
  ports:
  - port: 9113
    name: metrics
    targetPort: 9113
    protocol: TCP
  selector:
    app: web
  type: ClusterIP
